# vitajs

./: .gitignore  CMakeLists.txt  README.md  build.sh
quickjs/: quickjs-libc.c  quickjs.c
src/: ath_env.c  ath_env.h  env.c  env.h  graphics.c  graphics.h  main.c  memory.c  script.c  script.h  system.c  system.h  taskman.c  taskman.h
src/assets/: main.js
src/common/: debugScreen.h
src/modules/: ath_screen.c  ath_system.c  font.c  pads.c  screen.c  system.c
